--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "mathjs": "^14.4.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
